# diffusion_mem_gen

./: .gitignore  README.md  pyproject.toml
experiments/colored_imagenet/shared_gmm/varying_model_size/: run_data_analysis_pipeline.ipynb  run_experiment.py  test_sampling.py
experiments/colored_imagenet/shared_gmm/varying_model_size/common/: evaluate.py  log_plot.py  orchestrate.py  train.py
experiments/gmm/shared_gmm/varying_model_size/: run_experiment.py  run_phase_transition_experiment.py  run_phase_transition_experiment_sweep.py
experiments/gmm/shared_gmm/varying_model_size/common/: evaluate.py  log_plot.py  orchestrate.py  train.py
src/diffusion_mem_gen/: constants.py  trainer.py
src/diffusion_mem_gen/distributions/: colored_signal_template_data.py
src/diffusion_mem_gen/distributions/templates/: fashion_mnist.py  imagenet_sketch.py  mnist.py
src/diffusion_mem_gen/loss/: loss_approximations.py  loss_scaling.py  loss_weights.py
src/diffusion_mem_gen/metrics/: learned_means.py  learned_variance.py  loss_fixed_t.py  memorization.py  utils.py  visualize_image.py
src/diffusion_mem_gen/models/: colored_template.py  gmm.py  lowrank_gmm.py  t_conditioned_mlp.py  transformer.py
src/diffusion_mem_gen/models/layers/: adaln.py  mlp.py
src/diffusion_mem_gen/optim/: batching.py  wsd.py
src/diffusion_mem_gen/utils/: factories.py  scheduler.py  wandb.py
tests/: test_gaussian_training.py  test_sampling_colored_mnist.py
